Updated docs with version 0.30 changes (forgot to do this at release time, oops).

--- a/eddie/trunk/doc/README
+++ b/eddie/trunk/doc/README
@@ -5,7 +5,8 @@ It is still very much in development but is very stable in its current
 form and has been used in production for over 4 years (it is the primary
 monitoring tool at the author's places of employment).
 
-Documentation is online at http://eddie-tool.net/doc/
+Documentation is online at http://eddie-tool.net/doc/ and in the doc/
+directory of the EDDIE-Tool distribution.
 
 You need to create a config directory where config.sample is located
 and create an eddie.cf config file and rules files.  See config.sample
