--- a/eddie/trunk/doc/TODO
+++ b/eddie/trunk/doc/TODO
@@ -1,17 +1,4 @@
-EDDIE TODO
-
-- create a generic data-collector class which provides thread-safe access to
-  cached data for the data-collector classes to inherit.
-
-- access to data-collectors should be through a dedicated class, which tracks
-  which data-collectors are available for the particular platform, rather
-  than the hard-coded method that exists now.
-
-- Elvin connection code needs to be re-written to run in its own thread to
-  prevent multiple threads creating Elvin connections, and to fix up Elvin
-  re-connection problems.
-
-- implement rule dependencies
+EDDIE TODO ** Needs updating, this list not up-to-date **
 
 - make os-dependent data collectors thread-safe, as Linux/proc.py
 
