--- a/eddie/trunk/doc/README
+++ b/eddie/trunk/doc/README
@@ -1,9 +1,9 @@
 This is the EDDIE Tool.  It is a monitoring, security and performance
 analysis tool for most common flavours of UNIX.
 
-It is still very much in development but is very stable in its current
+It is still being continuously developed but is very stable in its current
 form and has been used in production for over 4 years (it is the primary
-monitoring tool at the author's places of employment).
+monitoring tool at the author's places of employment, for example).
 
 Documentation is online at http://eddie-tool.net/doc/ and in the doc/
 directory of the EDDIE-Tool distribution.
@@ -15,7 +15,10 @@ for examples.
 See QUICKSTART if you are impatient.
 
 See http://eddie-tool.net/ for more information.
-Email eddie@eddie-tool.net for information/help/tips/comments/etc.
+Email eddie@eddie-tool.net for information/help/tips/comments/etc
+or join one of the mailing lists.  The authors will be only too
+happy to assist.
 
+Cheers,
 Chris & Rod.
 
