changed email from eddie@eddie-tool.net to info at eddie-tool dot net

--- a/eddie/trunk/doc/README
+++ b/eddie/trunk/doc/README
@@ -15,9 +15,9 @@ for examples.
 See QUICKSTART if you are impatient.
 
 See http://eddie-tool.net/ for more information.
-Email eddie@eddie-tool.net for information/help/tips/comments/etc
-or join one of the mailing lists.  The authors will be only too
-happy to assist.
+Email info at eddie-tool dot net for information/help/tips/comments/etc
+or join one of the mailing lists.  The authors will be only too happy
+to assist.
 
 Cheers,
 Chris & Rod.
