Added some notes about Win32 compatibility in QUICKSTART, README, manual.html.

--- a/eddie/trunk/doc/README
+++ b/eddie/trunk/doc/README
@@ -14,11 +14,14 @@ for examples.
 
 See QUICKSTART if you are impatient.
 
+See README.win32.txt if you are installing on Win32 (Windows XP or
+Server).
+
 See http://eddie-tool.net/ for more information.
 Email info at eddie-tool dot net for information/help/tips/comments/etc
 or join one of the mailing lists.  The authors will be only too happy
 to assist.
 
 Cheers,
-Chris & Rod.
+Chris
 
