--- a/elvinrrd/trunk/elvinrrd/README
+++ b/elvinrrd/trunk/elvinrrd/README
@@ -1,14 +1,14 @@
 #### ElvinRRD ####
 
-Author: Chris Miles / chris at chrismiles dot info
-Home: http://www.psychofx.com/elvinrrd/
+Project Author:  Chris Miles - http://chrismiles.info/
+Project Home:    http://www.psychofx.com/elvinrrd/
 
 
 ## Description ##
 
-ElvinRRD is a tool to provide the transportation of data across a network to be
-stored in an RRD database. ElvinRRD works with (and requires) both
-Elvin (http://elvin.dstc.edu.au/) and
+ElvinRRD is a tool to provide a mechanism for transporting data across a
+network and storing it in RRD databases. ElvinRRD works with (and requires)
+both Elvin (http://elvin.dstc.edu.au/) and
 RRDtool (http://people.ee.ethz.ch/~oetiker/webtools/rrdtool/).
 
 Any Elvin producer (client) can send data for ElvinRRD to store (e.g.,
@@ -18,7 +18,7 @@ resulting RRD databases (e.g., Cricket http://cricket.sourceforge.net/).
 ElvinRRD is an Elvin consumer, meaning it subscribes for messages on an Elvin
 messaging network.  Any matching messages (containing at least the key
 ELVINRRD) are delivered to ElvinRRD, and if they match an entry in the ElvinRRD
-config file, will have their data stored to the corresponding RRD database.
+config file, will have their data stored in the corresponding RRD database.
 
 
 ## Requirements ##
@@ -42,10 +42,11 @@ py-rrdtool: http://sourceforge.net/projects/py-rrdtool/
 
 1. Unpack the elvinrrd tarball somewhere.  Only elvinrrd.py and elvinrrd.cf are
    needed to actually run it.
-2. Edit the first line of elvinrrd.py to point to your Python interpreter.
-3. Edit elvinrrd.cf to setup what RRD messages to capture and where to store
-   them.
-4. Run it with a command like:
+2. Edit elvinrrd.cf to setup what RRD messages to capture and where to store
+   them.  The defaults are fine if you would like the RRD databases stored in
+   /export/rrd/ and subdirectoried by data type.  This is the format required
+   for the eddiebrowser CGI interface (available separately).
+3. Run it with a command like:
    $ ./elvinrrd.py -v -d -c ./elvinrrd.cf -e elvin://elvin.dstc.edu.au/
    -v enabled verbose output
    -d enables debugging (more verbose) output
@@ -54,7 +55,7 @@ py-rrdtool: http://sourceforge.net/projects/py-rrdtool/
       a public Elvin server setup by the Elvin authors and can be used for
       testing if you do not have your own Elvin server running.
    Note: you may have to setup your LD_LIBRARY_PATH so that elvinrrd.py can
-   find librrd.  For example:
+   find librrd.  For example (on Linux):
    $ LD_LIBRARY_PATH=/opt/rrdtool/lib ./elvinrrd.py -v -d -c ./elvinrrd.cf \
      -e elvin://elvin.dstc.edu.au/
 
@@ -79,11 +80,19 @@ which means the RRD database for loadavg1 data samples on host 'test' has been
 created and the first data inserted.
 
 
+## RRD graphing ##
+
+The RRD databases can be displayed graphically using many tools, such as:
+ * RRDTool itself
+ * Cricket - http://cricket.sourceforge.net/
+ * Cacti - http://www.cacti.net/
+ * eddiebrowser
+
+
 ## Support ##
 
-ElvinRRD: for problems with ElvinRRD specifically, email elvinrrd@psychofx.com
-Elvin: for problems with Elvin, see http://elvin.dstc.edu.au/ or email
-  elvin@dstc.edu.au
+ElvinRRD: for problems with ElvinRRD specifically, email elvinrrd at psychofx dot com
+Elvin: for problems with Elvin, see http://elvin.dstc.edu.au/
 RRDtool: for problems with RRDtool, see
   http://people.ee.ethz.ch/~oetiker/webtools/rrdtool/
 Python: for Python problems, see http://www.python.org/Help.html
