Added a note/warning about the OpenBSD libc/pthread "atexit" issue prior to OpenBSD 3.9.

--- a/eddie/trunk/doc/README
+++ b/eddie/trunk/doc/README
@@ -17,6 +17,8 @@ See QUICKSTART.txt if you are impatient.
 See README.win32.txt if you are installing on Win32 (Windows XP or
 Server).
 
+See README.OpenBSD.txt if you are installing on OpenBSD.
+
 See LICENSE.txt for licensing details.
 
 See http://eddie-tool.net/ for more information.
